Commit from VS Code

--- a/src/options/train/ae_faces.yml
+++ b/src/options/train/ae_faces.yml
@@ -1,12 +1,9 @@
-name: ae_22jun2022
+name: ae2_faces_22jun2022
 task: autoencoder
-gpu_ids: [0] # empty [] means CPU
+gpu_ids: [0]
 dataset:
   name: img
-  #path_dir: '/home/manavendra/homeNN/Datasets/cats_dogs/training_set/cats/'
-  path_dir:  '/home/manavendra/homeNN/Datasets/cats_dogs/training_set/dogs/'
-  #path_test1: '/home/manavendra/homeNN/Datasets/cats_dogs/test_set/cats/'
-  #path_test2: '/home/manavendra/homeNN/Datasets/cats_dogs/test_set/dogs/'
+  path_dir: /home/manavendra/homeNN/Datasets/mounted/FFHQ
   batch_size: 16
   shuffle: True
   num_workers: 4
@@ -15,17 +12,15 @@ networks:
   ae:
     arch: SimpleAEUnet
     in_nc: 3
-    mid_nc: 32
+    mid_nc: 16
     out_nc: 3
 
     losser_type: image
     loss:
-      pix_l1:
-        type: pixel
+      pixel:
         criterion: {criterion_type: l1}
         weight: 1.0
-      tv_2:
-        type: tv
+      tv:
         criterion: {gamma: 2}
         weight: 0.01
 
@@ -48,15 +43,15 @@ networks:
 
 
 weights: 
-  ae: '../experiments/ae_21jun2022/models/ae.pth'
+  ae: '../experiments/ae_faces_22jun2022/models/ae.pth'
 
 experiments:
   root: '../experiments/'
-  checkpoint_freq: 4000
+  checkpoint_freq: 2000
   display_freq: 100
 
 train:
-  n_iters: 20000
+  n_iters: 10000
   
 #loss:
 #  func_type: CrossEntropyLoss
@@ -66,8 +61,7 @@ train:
   #pixel_weight: 100.0
 
 logger:
-  loss_item_freq: 10 # Preferably a multiple of print_freq. loss.item() increase GPU-CPU sync. So let's do item() more rarer
-  print_freq: 500
+  print_freq: 200
   save_log_file: True
   #path_log_file: '../logs'
    
